[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookies-backpack"
version = "0.0.1"
authors = [
  { name="CookieBox26", email="cookie-box@cookie-box.info" },
]
description = "Cookie's backpack."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "python-dotenv",
  "toml",
  "requests",
  "pymupdf",
]

[project.scripts]
cb = "cookies_backpack.cli:main"
